--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Calculator app</title>
+  <title>Calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -37,31 +37,31 @@
 
     <div class="keypad">
       <div class="row-1">
-        <input type="button" value="7">
-        <input type="button" value="8">
-        <input type="button" value="9">
+        <input type="button" value="7" class="digit">
+        <input type="button" value="8" class="digit">
+        <input type="button" value="9" class="digit">
         <input type="button" class="del" value="DEL">
       </div>
 
       <div class="row-2">
-        <input type="button" value="4">
-        <input type="button" value="5">
-        <input type="button" value="6">
-        <input type="button" value="+">
+        <input type="button" value="4" class="digit">
+        <input type="button" value="5" class="digit">
+        <input type="button" value="6" class="digit">
+        <input type="button" value="+" class="operator">
       </div>
 
       <div class="row-3">
-        <input type="button" value="1">
-        <input type="button" value="2">
-        <input type="button" value="3">
-        <input type="button" value="-">
+        <input type="button" value="1" class="digit">
+        <input type="button" value="2" class="digit">
+        <input type="button" value="3" class="" class="digit">
+        <input type="button" value="-" class="operator">
       </div>
 
       <div class="row-4">
-        <input type="button" value=".">
-        <input type="button" value="0">
-        <input type="button" value="/">
-        <input type="button" value="*">
+        <input type="button" value="." class="dot">
+        <input type="button" value="0" class="digit">
+        <input type="button" class="operator" value="/">
+        <input type="button" value="*" class="operator">
       </div>
 
       <div class="row-1">
